--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "imap-simple": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "openai": "^4.87.3",
     "passport": "^0.7.0",
@@ -39,6 +40,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.13.10",
+    "@types/node-cron": "^3.0.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   }
