get the plain email body

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "imap": "^0.8.19",
     "imap-simple": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mailparser": "^3.7.2",
     "mongoose": "^8.12.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
@@ -38,6 +39,7 @@
     "@types/imap": "^0.8.42",
     "@types/imap-simple": "^4.2.9",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/mailparser": "^3.4.5",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.13.10",
     "@types/node-cron": "^3.0.11",
