--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/axios": "^0.14.4",
+    "axios": "^1.8.3",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "cohere-ai": "^7.16.0",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
