--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.13.10",
     "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^6.4.17",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   }
