--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.8.3",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "cheerio": "^1.0.0",
     "cohere-ai": "^7.16.0",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
@@ -26,6 +27,7 @@
     "googleapis": "^146.0.0",
     "imap": "^0.8.19",
     "imap-simple": "^5.1.0",
+    "jsdom": "^26.0.0",
     "jsonwebtoken": "^9.0.2",
     "mailparser": "^3.7.2",
     "mongoose": "^8.12.1",
@@ -37,11 +39,13 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
+    "@types/cheerio": "^0.22.35",
     "@types/cors": "^2.8.17",
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.0",
     "@types/imap": "^0.8.42",
     "@types/imap-simple": "^4.2.9",
+    "@types/jsdom": "^21.1.7",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mailparser": "^3.4.5",
     "@types/mongoose": "^5.11.97",
