--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.ts"
+   "start": "node dist/index.js",
+  "dev": "nodemon index.ts"
   },
   "keywords": [],
   "author": "",
