--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "google-auth-library": "^9.15.1",
     "googleapis": "^146.0.0",
     "imap": "^0.8.19",
     "imap-simple": "^5.1.0",
