update the auth

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcryptjs": "^3.0.2",
     "cheerio": "^1.0.0",
     "cohere-ai": "^7.16.0",
+    "cookie-parser": "^1.4.7",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
     "@types/cheerio": "^0.22.35",
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.0",
